--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,10 @@
+== Code Status
+
+{<img src="https://travis-ci.org/FireWhale/Hibiki.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/FireWhale/Hibiki]
+
 == Welcome
+
+
 
 Welcome to the github for Hibiki (www.hibiki.moe), a Ruby-on-Rails musical database focusing on asian music, specificially jpop, anime music (anison), doujin music (independent japanese music), and vocaloid/utaite songs. If you like any of this music, you're definitely in the right place!
 
